# sdgminer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/sdgminer/: __init__.py  analysis.py  entities.py  extraction.py  models.py  plotting.py  preprocessing.py  transformations.py  utils.py
tests/: lorem_ipsum.txt  test_analysis.py  test_extraction.py  test_sdgminer.py
