[tool.poetry]
name = "sdgminer"
version = "0.1.0"
description = "Analyse text data with respect to the Sustainable Development Goals (SDGs)."
authors = ["Mykola Skrynnyk"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
