[tool.poetry]
name = "sdgminer"
version = "0.1.0"
description = "Analyse text data with respect to the Sustainable Development Goals (SDGs)."
authors = ["Mykola Skrynnyk"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.23.3"
pandas = "^1.4.4"
scipy = ">=1.7.3"
scikit-learn = "^1.1.2"
plotly = "^5.10.0"
bokeh = "^2.4.3"
spacy = "3.4.*"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0.tar.gz"}
pydantic = "1.9.*"
networkx = "^2.8.6"
"pdfminer.six" = "^20220524"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
